--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -1,9 +1,25 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/backendab?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#Ambiente de prueba
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/backendab?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
+
+
+#Ambiente de producci\u00f3n
+
+
+spring.datasource.url=mysql://urphqtem6nonq5p5:iyVnPG7HiTL57BvdLVz1@bypyzhrswcxcobsdpivf-mysql.services.clever-cloud.com:3306/bypyzhrswcxcobsdpivf
+spring.datasource.username=urphqtem6nonq5p5
+spring.datasource.password=iyVnPG7HiTL57BvdLVz1
+
+
 
 #JWT
 jwt.secret = secret
 jwt.expiration = 3600
+
+
+
