--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0",
     "jquery": "^3.6.0",
+    "ng2-ckeditor": "^1.3.7",
     "rxjs": "~7.5.0",
     "swiper": "^8.3.2",
     "tslib": "^2.3.0",
